<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.amant.calculatorapp.MainActivity">


    <EditText
        android:id="@+id/firstNum"
        style="?android:attr/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:focusable="false"
        android:gravity="bottom|end|clip_horizontal"
        android:imeOptions="actionDone"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="@color/colorFunctionButton"
        android:textColorHint="@color/colorFunctionButton"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondNum"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/secondNum"
        style="?android:attr/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:focusable="false"
        android:gravity="bottom|end|clip_horizontal"
        android:hint="0"
        android:imeOptions="actionDone"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="@color/colorFunctionButton"
        android:textColorHint="@color/colorFunctionButton"
        android:textSize="36sp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/colorFunctionButton"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_num_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/one_sym"

                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_num_2"
                app:layout_constraintStart_toStartOf="@+id/btn_ac"
                app:layout_constraintTop_toBottomOf="@+id/btn_ac" />

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/sign_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_ac"
                app:layout_constraintEnd_toStartOf="@+id/btn_sqrt"
                app:layout_constraintStart_toEndOf="@+id/btn_ac" />

            <Button
                android:id="@+id/btn_sqrt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/sqrt_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_sign"
                app:layout_constraintEnd_toStartOf="@+id/btn_div"
                app:layout_constraintStart_toEndOf="@+id/btn_sign" />

            <Button
                android:id="@+id/btn_num_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/two_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_1"
                app:layout_constraintEnd_toStartOf="@+id/btn_num_3"
                app:layout_constraintStart_toEndOf="@+id/btn_num_1" />

            <Button
                android:id="@+id/btn_ac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/aclr_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_sign"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/div_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_sqrt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_sqrt" />

            <Button
                android:id="@+id/btn_num_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/three_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_2"
                app:layout_constraintEnd_toStartOf="@+id/btn_mul"
                app:layout_constraintStart_toEndOf="@+id/btn_num_2" />

            <Button
                android:id="@+id/btn_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/result_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_dec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_dec" />

            <Button
                android:id="@+id/btn_dec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/dec_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_zero"
                app:layout_constraintEnd_toStartOf="@+id/btn_result"
                app:layout_constraintStart_toEndOf="@+id/btn_zero" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/zero_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_clear"
                app:layout_constraintEnd_toStartOf="@+id/btn_dec"
                app:layout_constraintStart_toEndOf="@+id/btn_clear" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/clr_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_zero"
                app:layout_constraintStart_toStartOf="@+id/btn_num_7"
                app:layout_constraintTop_toBottomOf="@+id/btn_num_7" />

            <Button
                android:id="@+id/btn_add"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/pls_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_num_9" />

            <Button
                android:id="@+id/btn_num_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/nine_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_8"
                app:layout_constraintEnd_toStartOf="@+id/btn_add"
                app:layout_constraintStart_toEndOf="@+id/btn_num_8" />

            <Button
                android:id="@+id/btn_num_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/eight_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_7"
                app:layout_constraintEnd_toStartOf="@+id/btn_num_9"
                app:layout_constraintStart_toEndOf="@+id/btn_num_7" />

            <Button
                android:id="@+id/btn_num_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/seven_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_num_8"
                app:layout_constraintStart_toStartOf="@+id/btn_num_4"
                app:layout_constraintTop_toBottomOf="@+id/btn_num_4" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/sub_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_num_6" />

            <Button
                android:id="@+id/btn_num_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/six_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_5"
                app:layout_constraintEnd_toStartOf="@+id/btn_sub"
                app:layout_constraintStart_toEndOf="@+id/btn_num_5" />

            <Button
                android:id="@+id/btn_num_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/five_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_4"
                app:layout_constraintEnd_toStartOf="@+id/btn_num_6"
                app:layout_constraintStart_toEndOf="@+id/btn_num_4" />

            <Button
                android:id="@+id/btn_num_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorNumberButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/four_sym"
                android:textColor="@color/colorFunctionButton"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_num_5"
                app:layout_constraintStart_toStartOf="@+id/btn_num_1"
                app:layout_constraintTop_toBottomOf="@+id/btn_num_1" />

            <Button
                android:id="@+id/btn_mul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorFunctionButton"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:minHeight="70dp"
                android:text="@string/mul_sym"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_num_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_num_3" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
